welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: illegal character '\u00a8'
	return (a%10 == b¨%10) 
                         ^